# internal-admin

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  create_superuser.py  demo.py  demo_web.py  example.py  pyproject.toml  test_auth.py  test_manual.py
.github/workflows/: ci.yml  publish-testpypi.yml  release.yml
internal_admin/: __init__.py  cli.py  config.py  registry.py  site.py
internal_admin/admin/: __init__.py  filters.py  form_engine.py  model_admin.py  query_engine.py  router_factory.py
internal_admin/auth/: __init__.py  activity.py  models.py  permissions.py  routes.py  security.py
internal_admin/database/: __init__.py  admin_tables.py  engine.py  session.py
internal_admin/static/css/: admin.css
internal_admin/static/js/: admin.js
internal_admin/templates/: base.html  dashboard.html
internal_admin/templates/admin/: confirm_delete.html  dashboard.html  form.html  list.html
internal_admin/templates/auth/: login.html
scripts/: pre_publish_check.sh
tests/: conftest.py  test_admin.py
